# Flavour-Odessey

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: LABELS.md  RELEASE_CHECKLIST.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
ai/: __init__.py
ai/agents/: __init__.py  common.py
ai/orchestrator/: __init__.py  service.py
ai/prompts/: __init__.py  templates.py
ai/providers/: __init__.py  base.py  factory.py  mock.py
ai/schemas/: __init__.py  models.py
ai/tests/: test_agents.py
audio/: manifest.json
backend/: alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py  openapi.py
backend/scripts/: db.ps1  generate_openapi.py
backend/tests/: test_ai.py  test_auth.py  test_database.py  test_gameplay.py  test_health.py  test_models_sqlite.py  test_npcs.py  test_openapi.py  test_world.py
database/seeds/: mvp_seed.json
docs/: AI_Architecture.md  Architecture.md  Code_Style.md  Contributing.md  Deployment.md  Future_Roadmap.md  Game_Architecture.md  Known_Limitations.md  Release_Notes.md  Testing.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/assets/: manifest.json
frontend/components/: error-boundary.tsx
frontend/hooks/: use-audio-feedback.ts  use-motion-preference.ts  (+4 more)
(+285 files in other folders)
