[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "flavor-odyssey-ai"
version = "0.1.0"
description = "Provider-neutral MVP AI agents for Flavor Odyssey"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["ai*"]
exclude = ["ai.tests*"]
